Make enter on file inputs submit form.  Bug 111689, r+sr=jst, a=choffman